--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,12 +21,12 @@
         - {{ site.description | escape }}
       {% endunless %}
     </title>
-  
-  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.png">
+
+  <link rel="shortcut icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍉</text></svg>">
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml">
   <link rel="alternate" type="application/json" title="{{ site.title }}" href="{{ "/feed.json" | prepend: site.baseurl | prepend: site.url }}" />
   <link rel="sitemap" type="application/xml" title="sitemap" href="{{ site.baseurl }}/sitemap.xml" />
-      
+
   <style>
     {% capture include_to_scssify %}
       {% include inline.scss %}
